refactored map of methods and lambda